force-app/main/default/objects/Product_Name__c/Product_Name__c.object-meta.xml
<CustomObject>
    <label>Product Name</label>
    <nameField>
        <label>Product Name</label>
        <type>Text</type>
    </nameField>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>