force-app/main/default/objects/Product_Name__c/fields/Distr_Channel__c.field-meta.xml
<CustomField>
    <fullName>Distr_Channel__c</fullName>
    <formula>TEXT( Product_Sales_Info__r.Distr_Channel__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Distribution Channel</label>
    <type>Text</type>
</CustomField>