force-app/main/default/objects/Product_Name__c/fields/Plan__c.field-meta.xml
<CustomField>
    <fullName>Plan__c</fullName>
    <formula>TEXT(Product_Sales_Info__r.Factory__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Plant</label>
    <type>Text</type>
</CustomField>