force-app/main/default/objects/Product_Name__c/fields/Product_Combo__c.field-meta.xml
<CustomField>
    <fullName>Product_Combo__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Product Combo</label>
    <type>Checkbox</type>
</CustomField>