force-app/main/default/objects/Product_Name__c/fields/Product_Sales_Info__c.field-meta.xml
<CustomField>
    <fullName>Product_Sales_Info__c</fullName>
    <label>Product Info</label>
    <referenceTo>Product_Sales_Info__c</referenceTo>
    <relationshipLabel>Product Name</relationshipLabel>
    <relationshipName>Commodity</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>