force-app/main/default/objects/Product_Name__c/listViews/Product_Combo.listView-meta.xml
<ListView>
    <fullName>Product_Combo</fullName>
    <columns>NAME</columns>
    <columns>Customer__c</columns>
    <columns>External_Id__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>CREATEDBY_USER</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Product_Combo__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>Product Combo</label>
</ListView>